fixed some responsiveness on mobile screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -307,6 +307,10 @@ header nav .nav-wrapper .brand-logo img {
     width: 20%;
     margin-top: 15px;
     }
+header nav .mobcont img {
+    width: 50%;
+    margin-top:20px;
+   }
 
 header nav .nav-wrapper .brand-logo span {
     font-size: 4rem;
